[package]
version = "0.0.1"
name = "bazel_protos"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]
publish = false

[dependencies]
bytes = "0.4.5"
hashing = { path = "../../hashing" }
prost = "0.4"
prost-derive = "0.4"
prost-types = "0.4"
tower-grpc = { path = "/Users/dwagnerhall/src/github.com/tower-rs/tower-grpc", features = ["prost"] }

[build-dependencies]
build_utils = { path = "../../build_utils" }
tower-grpc-build = { path = "/Users/dwagnerhall/src/github.com/tower-rs/tower-grpc/tower-grpc-build" }
