[package]
name = "mock"
version = "0.0.1"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]
publish = false

[dependencies]
bazel_protos = { path = "../../process_execution/bazel_protos" }
boxfuture = { path = "../../boxfuture" }
bytes = "0.4.5"
futures = "^0.1.16"
futures-timer = "0.1"
h2 = "0.1.10"
hashing = { path = "../../hashing" }
http = "0.1"
log = "0.4"
prost = "0.4"
testutil = { path = ".." }
tokio-core = "0.1"
tower-grpc = { path = "/Users/dwagnerhall/src/github.com/tower-rs/tower-grpc", features = ["prost"] }
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
